--- a/config.yml
+++ b/config.yml
@@ -1,9 +1,15 @@
 ---
-glass_breaker_group:
+bypass_group:
   - mateusmuller
   - root
 
-  freezing_dates:
-    from: 2025-03-20
-    to: 2025-03-25
-    
+freezing_dates:
+  End of the Year:
+    from: 2025-12-24
+    to: 2026-01-02
+  Carnival:
+    from: 2025-03-01
+    to: 2025-03-05
+  Test:
+    from: 2025-03-19
+    to: 2025-03-21
